Starting second story; implementing chara images and stage positions

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /tl/
 /audio/test/
 /images/test/
+/.vscode/
 
 # trying to get rid of script-test.rpy from the repository but keep it locally 
 script-test.rpy
